--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,25 @@
-asgiref==3.3.4
-certifi==2021.5.30
-chardet==4.0.0
-charset-normalizer==2.0.4
-ClickUz==0.3
+asgiref==3.6.0
+certifi==2022.12.7
+charset-normalizer==3.0.1
 coreapi==2.3.3
 coreschema==0.0.4
-Django==3.2.3
-django-environ==0.4.5
-djangorestframework==3.12.4
-drf-yasg==1.20.0
-gunicorn==20.1.0
-idna==3.2
+Django==4.1.5
+django-environ==0.9.0
+djangorestframework==3.14.0
+drf-yasg==1.21.4
+idna==3.4
 inflection==0.5.1
 itypes==1.2.0
-Jinja2==3.0.1
-lxml==4.6.3
-MarkupSafe==2.0.1
-packaging==21.0
-Pillow==8.3.1
-psycopg2-binary==2.8.6
-pyparsing==2.4.7
-pyTelegramBotAPI==3.8.2
-pytz==2021.1
-PyYAML==5.4.1
-requests==2.26.0
-ruamel.yaml==0.17.13
-ruamel.yaml.clib==0.2.6
-spyne==2.13.16
-sqlparse==0.4.1
-suds-jurko==0.6
-typing-extensions==3.10.0.0
-uritemplate==3.0.1
-urllib3==1.26.6
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+packaging==23.0
+Pillow==9.4.0
+psycopg2==2.9.5
+psycopg2-binary==2.9.5
+pytz==2022.7.1
+requests==2.28.2
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
+sqlparse==0.4.3
+uritemplate==4.1.1
+urllib3==1.26.14
